# Lightmark

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  windows-build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: browserExif.ts  metadata.ts  renderer.ts  tauriApi.ts  themes.ts  types.ts  updater.ts
